--- a/index.html
+++ b/index.html
@@ -10,14 +10,21 @@
 
 <body>
     <header>
-        <ul>
-            <li>Ínicio</li>
-            <li>Pag 1</li>
-            <li>Pag 2</li>
-            <li>Pag 3</li>
-            <li>Pag 4</li>
-        </ul>
+        <nav class="nav-barra">
+            <div class="logo">
+                <img src="img/Logo.png" alt="favicon" style="height: 300px; width: 300px;">
+            </div>
+            <div class="nav-lista">
+                <ul>
+                    <li class="nav-pag"><a href="index.html" class="nav-link">Home</a></li>
+                    <li class="nav-pag"><a href="Floricultura.html" class="nav-link">Floricultura</a></li>
+                    <li class="nav-pag"><a href="Chocolate.html" class="nav-link">Chocolates</a></li>
+                    <li class="nav-pag"><a href="Presentes.html" class="nav-link">Presentes</a></li>
+                    <li class="nav-pag"><a href="Cestas.html" class="nav-link">Cestas</a></li>
+                </ul>
+            </div>
     </header>
+
 
 </body>
 
