--- a/Cestas.html
+++ b/Cestas.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cestas</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <header>
+        <nav class="nav-bar">
+            <div class="logo">
+                <img src="img/Logo.png" alt="favicon" style="height: 300px; width: 300px;">
+            </div>
+            <div class="nav-list">
+                <ul>
+                    <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+                    <li class="nav-item"><a href="Floricultura.html" class="nav-link">Floricultura</a></li>
+                    <li class="nav-item"><a href="Chocolate.html" class="nav-link">Chocolates</a></li>
+                    <li class="nav-item"><a href="Presentes.html" class="nav-link">Presentes</a></li>
+                    <li class="nav-item"><a href="Cestas.html" class="nav-link">Cestas</a></li>
+                </ul>
+            </div>
+    </header>
 </body>
+
 </html>
