--- a/index.html
+++ b/index.html
@@ -4,27 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página</title>
+    <title>Home</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
-        <nav class="nav-barra">
+        <nav class="nav-bar">
             <div class="logo">
-                <img src="img/Logo.png" alt="favicon" style="height: 300px; width: 300px;">
+                <img src="img/Logo.png" alt="favicon" style="height: 250px; width: 250px;">
             </div>
-            <div class="nav-lista">
+            <div class="nav-list">
                 <ul>
-                    <li class="nav-pag"><a href="index.html" class="nav-link">Home</a></li>
-                    <li class="nav-pag"><a href="Floricultura.html" class="nav-link">Floricultura</a></li>
-                    <li class="nav-pag"><a href="Chocolate.html" class="nav-link">Chocolates</a></li>
-                    <li class="nav-pag"><a href="Presentes.html" class="nav-link">Presentes</a></li>
-                    <li class="nav-pag"><a href="Cestas.html" class="nav-link">Cestas</a></li>
+                    <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+                    <li class="nav-item"><a href="Floricultura.html" class="nav-link">Floricultura</a></li>
+                    <li class="nav-item"><a href="Chocolate.html" class="nav-link">Chocolates</a></li>
+                    <li class="nav-item"><a href="Presentes.html" class="nav-link">Presentes</a></li>
+                    <li class="nav-item"><a href="Cestas.html" class="nav-link">Cestas</a></li>
                 </ul>
             </div>
     </header>
+    <div>
 
+    </div>
 
 </body>
 
