--- a/Presentes.html
+++ b/Presentes.html
@@ -7,13 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Presentes</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
+    <script src="script.js" defer></script>
+
 </head>
 
 <body>
     <header>
         <nav class="nav-bar">
             <div class="logo">
-                <img src="img/Logo.png" alt="favicon" style="height: 300px; width: 300px;">
+                <img src="img/favicon.png" alt="favicon" style="height: 100px; width: 125px;">
             </div>
             <div class="nav-list">
                 <ul>
