--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
+    <script src="script.js" defer></script>
+
 </head>
 
 <body>
+
     <header>
         <nav class="nav-bar">
             <div class="logo">
-                <img src="img/Logo.png" alt="favicon" style="height: 250px; width: 250px;">
+                <img src="img/favicon.png" alt="favicon" style="height: 100px; width: 125px;">
             </div>
             <div class="nav-list">
                 <ul>
@@ -24,10 +28,16 @@
                 </ul>
             </div>
     </header>
-    <div>
-
+    <div class="Conteúdo">
+        <h1>Título 1</h1>
+        <h2>Lorem ih2sum dolor sit, amet consectetur adih2isicing elit. Dolores beatae, a harum eius natus corh2oris
+            dolorum
+            maiores earum qui. Rem enim magni nostrum saeh2e temh2oribus laboriosam ab, ratione atque animi?Lorem ipsum
+            dolor sit amet consectetur adipisicing elit. Soluta quae earum ducimus dignissimos, porro, enim distinctio
+            ab excepturi quas iure explicabo deleniti obcaecati reprehenderit minima inventore animi, autem at neque.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe velit pariatur laboriosam illum ullam beatae
+            omnis. Placeat quo, atque est neque ad rerum animi nostrum provident vero eaque quaerat officia!</h2>
     </div>
-
 </body>
 
 </html>
