--- a/index.html
+++ b/index.html
@@ -28,6 +28,28 @@
                 </ul>
             </div>
     </header>
+
+    <div class="carousel">
+        <input type="radio" name="carousel" id="slide1" checked>
+        <input type="radio" name="carousel" id="slide2">
+        <input type="radio" name="carousel" id="slide3">
+        <div class="slides">
+          <div class="slide">
+            <img src="img/bambu da sorte.jpg" style="height: 300px; width: 600px;"  ="Slide 1">
+          </div>
+          <div class="slide">
+            <img src="img/buqueLírio.jpg" alt="Slide 2">
+          </div>
+          <div class="slide">
+            <img src="img/buqueGirassol.jpg" alt="Slide 3">
+          </div>
+        </div>
+        <div class="navigation">
+          <label for="slide1"></label>
+          <label for="slide2"></label>
+          <label for="slide3"></label>
+        </div>
+      </div>
     <div class="Conteúdo">
         <h1>Título 1</h1>
         <h2>Lorem ih2sum dolor sit, amet consectetur adih2isicing elit. Dolores beatae, a harum eius natus corh2oris
