--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Início</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="./global/header.css">
+  <link rel="stylesheet" href="./global/style.css">
   <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
 
   <script src="index.js" defer></script>
@@ -21,10 +23,9 @@
       <div class="nav-list">
         <ul>
           <li class="nav-item"><a href="index.html" class="nav-link">Início</a></li>
-          <li class="nav-item"><a href="Floricultura.html" class="nav-link">Floricultura</a></li>
-          <li class="nav-item"><a href="Chocolate.html" class="nav-link">Chocolates</a></li>
-          <li class="nav-item"><a href="Presentes.html" class="nav-link">Presentes</a></li>
-          <li class="nav-item"><a href="Cestas.html" class="nav-link">Cestas</a></li>
+          <li class="nav-item"><a href="./paginas/flores/flores.html" class="nav-link">Flores</a></li>
+          <li class="nav-item"><a href="./paginas/chocolates/chocolate.html" class="nav-link">Chocolates</a></li>
+          <li class="nav-item"><a href="./paginas/cestas/cestas.html" class="nav-link">Cestas</a></li>
         </ul>
       </div>
   </header>
@@ -35,6 +36,8 @@
     <div class="imagem">
     </div>
   </div>
+
+  <!-- Recentes -->
 
   <div class="recentes">
 
@@ -48,11 +51,34 @@
 
     <div class="navegation">
       <span id="anteriorRecentes">
-        <svg xmlns="http://www.w3.org/2000/svg" height="30" width="30" viewBox="0 0 320 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 246.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192z"/></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" height="30" width="30" viewBox="0 0 320 512"><path d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 246.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192z"/></svg>
       </span>
 
       <span id="proximoRecentes">
-        <svg xmlns="http://www.w3.org/2000/svg" height="30" width="30" viewBox="0 0 320 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" height="30" width="30" viewBox="0 0 320 512"><path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/></svg>
+      </span>
+    </div>
+  </div>
+
+  <!-- Mais Vendidos -->
+
+  <div class="maisVendidos">
+
+    <h2>
+      Mais Vendidos
+    </h2>
+
+    <div class="itens">
+
+    </div>
+
+    <div class="navegation">
+      <span id="anteriorMaisVendidos">
+        <svg xmlns="http://www.w3.org/2000/svg" height="30" width="30" viewBox="0 0 320 512"><path d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 246.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192z"/></svg>
+      </span>
+
+      <span id="proximoMaisVendidos">
+        <svg xmlns="http://www.w3.org/2000/svg" height="30" width="30" viewBox="0 0 320 512"><path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/></svg>
       </span>
     </div>
   </div>
