--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Início</title>
   <link rel="stylesheet" href="index.css">
   <link rel="stylesheet" href="./global/header.css">
+  <link rel="stylesheet" href="./global/footer.css">
   <link rel="stylesheet" href="./global/style.css">
   <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
 
@@ -16,30 +17,27 @@
 <body>
   <!-- Cabeçalho -->
   <header>
-    <nav class="nav-bar">
-      <div class="logo">
-        <img src="img/favicon.png" alt="favicon" style="height: 100px; width: 125px;">
-      </div>
-      <div class="nav-list">
-        <ul>
-          <li class="nav-item"><a href="index.html" class="nav-link">Início</a></li>
-          <li class="nav-item"><a href="./paginas/flores/flores.html" class="nav-link">Flores</a></li>
-          <li class="nav-item"><a href="./paginas/chocolates/chocolate.html" class="nav-link">Chocolates</a></li>
-          <li class="nav-item"><a href="./paginas/cestas/cestas.html" class="nav-link">Cestas</a></li>
-        </ul>
-      </div>
+    <div class="logo">
+      <img src="img/favicon.png" alt="favicon">
+    </div>
+    <ul class="links">
+      <li class="link"><a href="index.html" class="nav-link">Início</a></li>
+      <li class="link"><a href="./paginas/flores/flores.html" class="nav-link">Flores</a></li>
+      <li class="link"><a href="./paginas/chocolates/chocolate.html" class="nav-link">Chocolates</a></li>
+      <li class="link"><a href="./paginas/cestas/cestas.html" class="nav-link">Cestas</a></li>
+    </ul>
   </header>
 
   <!-- Carrossel -->
 
-  <div class="carrossel">
+  <section class="carrossel">
     <div class="imagem">
     </div>
-  </div>
+  </section>
 
   <!-- Recentes -->
 
-  <div class="recentes">
+  <section class="recentes">
 
     <h2>
       Recentes
@@ -51,18 +49,24 @@
 
     <div class="navegation">
       <span id="anteriorRecentes">
-        <svg xmlns="http://www.w3.org/2000/svg" height="30" width="30" viewBox="0 0 320 512"><path d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 246.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192z"/></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" height="30" width="30" viewBox="0 0 320 512">
+          <path
+            d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 246.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192z" />
+        </svg>
       </span>
 
       <span id="proximoRecentes">
-        <svg xmlns="http://www.w3.org/2000/svg" height="30" width="30" viewBox="0 0 320 512"><path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" height="30" width="30" viewBox="0 0 320 512">
+          <path
+            d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z" />
+        </svg>
       </span>
     </div>
-  </div>
+  </section>
 
   <!-- Mais Vendidos -->
 
-  <div class="maisVendidos">
+  <section class="maisVendidos">
 
     <h2>
       Mais Vendidos
@@ -74,14 +78,50 @@
 
     <div class="navegation">
       <span id="anteriorMaisVendidos">
-        <svg xmlns="http://www.w3.org/2000/svg" height="30" width="30" viewBox="0 0 320 512"><path d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 246.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192z"/></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" height="30" width="30" viewBox="0 0 320 512">
+          <path
+            d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 246.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192z" />
+        </svg>
       </span>
 
       <span id="proximoMaisVendidos">
-        <svg xmlns="http://www.w3.org/2000/svg" height="30" width="30" viewBox="0 0 320 512"><path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" height="30" width="30" viewBox="0 0 320 512">
+          <path
+            d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z" />
+        </svg>
       </span>
     </div>
-  </div>
+  </section>
+
+<!-- Rodapé -->
+
+  <footer>
+    <img class="logoFooter" src="./img/logo.png" alt="">
+
+    <div class="mapa">
+      <a href="./paginas/flores/flores.html">Flores</a>
+      <a href="./paginas/chocolates/chocolate.html">Chocolate</a>
+      <a href="./paginas/cestas/cestas.html">Cestas</a>
+    </div>
+
+    <div class="infos">
+      <p class="email">
+        joinvillefloricultura@gmail.com
+      </p>
+
+      <p class="endereco">
+        Rua Coimbra - Centro, 999
+      </p>
+
+      <p class="numero">
+        47 99999-9999
+      </p>
+    </div>
+
+    <p class="copyright">
+      Copyright 2023. Todos os direitos reservados.
+    </p>
+  </footer>
 </body>
 
 </html>
